refactor: use Collections.unmodifiableList wrapper in findRelocations; restore PMD suppress on isRelocated
Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/c0bc364f-408f-4336-9be0-1a6574ef7fa8

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>